# ground_truth_labler

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
source/: CMakeLists.txt  main.cpp
source/core/: AnnotationData.cpp  AnnotationData.h  MotExporter.cpp  MotExporter.h  TrackingEngine.cpp  TrackingEngine.h  VideoManager.cpp  VideoManager.h
source/ui/: ControlBar.cpp  ControlBar.h  LabelPanel.cpp  LabelPanel.h  MainWindow.cpp  MainWindow.h  ResultPanel.cpp  ResultPanel.h  VideoWidget.cpp  VideoWidget.h
source/util/: FrameConverter.cpp  FrameConverter.h
